<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:text="@string/add_item"
            android:textColor="@color/colorAccent"
            android:textSize="22sp" />


        <EditText
            android:id="@+id/Name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/Weight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/weigthedit"
            android:inputType="numberSigned"
            android:singleLine="false"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/Count"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/counted"
            android:inputType="numberSigned"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <TextView
            android:id="@+id/noticetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/notice"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/hightGrey"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_gravity="top"
            android:background="@color/hightGrey"
            android:gravity="top"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/hightGrey">

            <Button
                android:id="@+id/buttonaAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/ic_add_circle_outline_black_24dp"
                android:text="Добавить"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />


            <Button
                android:id="@+id/butttonViewList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/ic_format_list_bulleted_black_24dp"
                android:text="Список"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <Button
                android:id="@+id/buttonSend"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/ic_done_all_black_24dp"
                android:text="Укомпл"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <Button
                android:id="@+id/buttonaClear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/ic_remove_circle_outline_black_24dp"
                android:text="Очистить"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>